<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonômia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">CALCULAR</string>
</resources>